# wdict

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  default.nix  flake.nix
scripts/: _lint.sh  build.sh  lint.sh  package.sh  readme.sh  test.sh
src/: crawl.rs  doc_queue.rs  error.rs  extractor.rs  filter.rs  lib.rs  main.rs  shutdown.rs  site.rs  urldb.rs  utils.rs  worddb.rs
src/cli/: args.rs  helpers.rs  mod.rs
src/collections/: doc_queue.rs  mod.rs  urldb.rs  worddb.rs
src/crawl/: crawler.rs  mod.rs  site.rs
src/extract/: extractor.rs  filter.rs  mod.rs
utils/readme/: Cargo.toml
utils/readme/src/: main.rs
