[package]
name = "wdict"
authors = ["pyqlsa"]
description = "Create dictionaries by scraping webpages or crawling local files."
version = "0.1.20"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/pyqlsa/wdict"
repository = "https://github.com/pyqlsa/wdict"
include = ["src/**/*.rs", "Cargo.toml", "Cargo.lock"]

[dependencies]
bytes = { version = "1.11.0" }
clap = { version = "4.5.53", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4" }
decancer = { version = "3.3.3" }
deunicode = { version = "1.6.2" }
env_logger = { version = "0.11.8" }
indicatif = { version = "0.18.3" }
indicatif-log-bridge = { version = "0.2.3" }
infer = { version = "0.19.0" }
log = { version = "0.4.28" }
psl = { version = "2.1.165" }
ratelimit = { version = "0.10.0" }
reqwest = { version = "0.12.24" }
scraper = { version = "0.24.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
tokio = { version = "1.48.0", features = ["full"] }
unicode-segmentation = { version = "1.12.0" }
url = { version = "2.5.7" }
